feat: add api to send roles_and_permissions
