# model/role.go
@@ -65,6 +65,28 @@ func (Permission) TableName() string {
 //------------------------------------------
 //------------------------------------------
 
+type RoleWithPermissions struct {
+	Id                  int64     `gorm:"column:id;type:serial;autoIncrement;primaryKey;"`
+	Name                string    `gorm:"column:name;type:text;not null;uniqueIndex:Role_name_key"`
+	Description         string    `gorm:"column:description;type:text;default:\"\";not null;"`
+	TorrentLeachLimitGb int       `gorm:"column:torrentLeachLimitGb;type:integer;not null;"`
+	TorrentSearchLimit  int       `gorm:"column:torrentSearchLimit;type:integer;not null;"`
+	CreatedAt           time.Time `gorm:"column:createdAt;type:timestamp(3);not null;default:CURRENT_TIMESTAMP;"`
+	UpdatedAt           time.Time `gorm:"column:updatedAt;type:timestamp(3);not null;"`
+	Permissions         []Permission
+}
+
+//------------------------------------------
+//------------------------------------------
+
+type UserRolePermissionRes struct {
+	RolesWithPermissions []RoleWithPermissions `json:"rolesWithPermissions"`
+	Roles                []Role                `json:"roles"`
+}
+
+//------------------------------------------
+//------------------------------------------
+
 type DefaultRoleId int64
 type DefaultRoleName string
 
